--- a/assets/css/apps/note/NoteFilter.css
+++ b/assets/css/apps/note/NoteFilter.css
@@ -1,5 +1,3 @@
-
-
 .btn-group {
     display: flex;
     justify-content: space-between;
@@ -34,4 +32,6 @@ img.active {
     gap: 25px;
 
     width: 70vw;
+
+    margin-block-start: 7em;
 }
