--- a/assets/css/cmps/AppHeader.css
+++ b/assets/css/cmps/AppHeader.css
@@ -1,6 +1,7 @@
 .app-header {
     position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
 
     z-index: 1000;
@@ -12,6 +13,14 @@
 
     padding: 0.5em;
     background-color: var(--color-primary-50);
+
+    &.shadow {
+        box-shadow: rgba(14, 63, 126, 0.06) 0px 0px 0px 1px,
+            rgba(42, 51, 70, 0.03) 0px 1px 1px -0.5px,
+            rgba(42, 51, 70, 0.04) 0px 2px 2px -1px,
+            rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px, rgba(42, 51, 70, 0.03) 0px 5px 5px -2.5px,
+            rgba(42, 51, 70, 0.03) 0px 10px 10px -5px, rgba(42, 51, 70, 0.03) 0px 24px 24px -8px;
+    }
 }
 
 
